Fixed overlap issue for footer links

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -819,18 +819,13 @@ main {
 .resume_link_container {
   position: absolute;
 
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   display: flex;
   align-items: center;
   justify-content: center;
-
-
-  text-align: center;
 }
 
 .resume_link_container a {
@@ -846,11 +841,9 @@ main {
 .links {
   position: absolute;
 
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 100%;
+  transform: translate(-100%, -50%);
 
   display: flex;
   align-items: center;
@@ -1157,7 +1150,9 @@ main {
   .resume_link_container,
   .links {
     position: relative;
-    width: fit-content;
+    top: 0;
+    left: 0;
+    transform: none;
   }
 
   .links {
